# libvidscramble

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: .gitignore  data_embed.h  pipeline.h  pipeline_parser.h  scrambler.h  scrambler_constructor_spec.h  util.h
src/: data_embed.cpp  pipeline.cpp  pipeline_parser.cpp  python_module.cpp  scrambler.cpp  util.cpp  video_decoder.cpp
test/: .gitignore  test.cpp  test_py_module.py
